[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "blinkvault"
version = "0.1.0"
description = "Local motion capture for Blink cameras — no subscription, 30s pre-roll, in-memory buffer"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["blink", "camera", "motion", "security", "surveillance", "ffmpeg", "livestream"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Video :: Capture",
]
dependencies = [
    "blinkpy>=0.25.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/karl-dykema/blinkvault"
Repository = "https://github.com/karl-dykema/blinkvault"
Issues = "https://github.com/karl-dykema/blinkvault/issues"

[project.scripts]
blinkvault = "blinkvault.app:main"
blinkvault-stream = "blinkvault.stream:cli"

[tool.setuptools.packages.find]
where = ["src"]
